<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- English words-->
    <string name="app_name">Coffee Restaurant</string>
    <string name="name_text">Name</string>
    <string name="toppings_text">Topping</string>
    <string name="whippedCream_check">Whipped Cream</string>
    <string name="coffee_name">"Coffee: "</string>
    <string name="whipped_cream_name">"Whipped cream: "</string>
    <string name="chocolate_name">"Chocolate: "</string>
    <string name="chocolate_check">Chocolate</string>
    <string name="quantity_text">"Quantity: "</string>
    <string name="orderSummary_text">Order Summary</string>
    <string name="order_Button">Summary</string>
    <string name="send_Button">Send</string>
    <string name="minusButton">-</string>
    <string name="plusButton">+</string>
    <string name="notOrderYet_Text">Not order yet</string>
    <string name="thanksOrder_Text">Thanks for your order!</string>
    <string name="orderSummaryName_text">"Name: "</string>
    <string name="coffeeOrder_text">
        Coffee Order for: <xliff:g example="Amy" id="name">%s</xliff:g>
    </string>
    <string name="hasWhippedCream_text">"Has Whipped Cream: "</string>
    <string name="hasChocolate_text">"Has Chocolate: "</string>
    <string name="Yes_text">Yes</string>
    <string name="No_text">No</string>
    <string name="totalPrice_text">"Total Price: "</string>
    <string name="orderSummaryReady_text">The order was already set</string>
    <string name="No_less_than_one">You cannot have less than 1 coffee</string>
    <string name="No_more_than_ten">You cannot add more than 10 coffees</string>
    <string name="No_preference_value">You cannot leave the field without any value</string>
    <string name="settings_menu">Settings</string>
    <string name="no_email_software">There\'s not any software for sending emails</string>
    <string name="prices_text">Prices</string>
    <string name="add_integer_value">Add an integer value</string>
    <string name="add_email_value">Add a valid email</string>
    <string name="add_name_for_order">Add a name for the order</string>

    <!-- Strings for coffee price -->
    <string name="coffee_price_title">Coffee Price</string>
    <string name="coffee_price_key" translatable="false">coffee_price</string>
    <string name="coffee_price_default" translatable="false">5</string>

    <!-- Strings for cream price -->
    <string name="whipped_cream_price_title">Whipped Cream Price</string>
    <string name="whipped_cream_price_key" translatable="false">whipped_cream_price</string>
    <string name="whipped_cream_price_default" translatable="false">1</string>

    <!-- Strings for chocolate price -->
    <string name="chocolate_price_title">Chocolate Price</string>
    <string name="chocolate_price_key" translatable="false">chocolate_price</string>
    <string name="chocolate_price_default" translatable="false">2</string>

    <!-- Strings for origin email-->
    <string name="email_title">Recipient email</string>
    <string name="email_key" translatable="false">email</string>
    <string name="email_default" translatable="false">cicelcup@hotmail.com</string>

</resources>
