<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androdi="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_editText_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name_text"
            android:inputType="textCapSentences" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings_text" />

        <CheckBox
            android:id="@+id/hasWhippeCream_checkbox_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/whippedCream_check"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/hasChocolat_checkbox_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/chocolate_check"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minusButton" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/quantity_text_view"
                android:paddingLeft="8dp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:textColor="@android:color/black" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plusButton" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/orderSummary_text" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:onClick="submitOrder"
                android:text="@string/order_Button" />

            <Button
                android:id="@+id/sendEmail_Button_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="sendEmail"
                android:text="@string/send_Button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
